--- a/08 Spinner/index8.html
+++ b/08 Spinner/index8.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"href="estilo.css">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="estilo8.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-
+  <title></title>
 </head>
+
 <body>
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
             <img src="../img/goku blue.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-            01 Hola Mundo/Calculadora
+            07 Spiner/Tablas de multiplicar
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,13 +27,18 @@
                 </div>
         </div>
     </nav>
-    <div class="container-fluid text-center">
-        <h1>Hola Mundo / Calculadora </h1><hr>
-    <button onclick="hola()" class="btn btn-danger">HOLA</button>
-    <button onclick="suma()" class="btn btn-dark">SUMA</button>
 
-    </div>
-    <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="main.js"></script>
+<center><h1>Spiner</h1><br></center>
+
+<Center><input type="range" onchange="valor()" min="0" max="100" value="50" id="n"><br>
+<h1 id="vn">0</h1>
+<h1 id="res">0</h1></Center>
+
+<center><button onclick="borrar()">Borrar</button></center>
+
+<script src="app8.js"></script>
 </body>
+
+</body>
+
 </html>
