--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
       </nav>
 
-
+¿   
       <div class="container text-center m-4">
         <div class="row">
             <div class="col">
@@ -38,11 +38,58 @@
             <div class="col">
             <a href="04 img/index4.html" class="btn btn-dark d-block">04 Imagenes</a>
       </div>
-
       
       <div class="col">
-            <a href="05 SweetTalert/index.html" class="btn btn-primary d-block">05 SweetTalert</a>
+            <a href="05 SweetTalert/index5.html" class="btn btn-danger d-block">05 SweetTalert</a>
       </div>
+
+      <div class="col">
+            <a href="06 Style/index6.html" class="btn btn-dark d-block">06 Style</a>
+      </div>
+
+      <div class="col">
+            <a href="07 Tablas de multiplicar/index7.html" class="btn btn-primary d-block">07 Tablas</a>
+      </div>
+
+      <div class="col">
+            <a href="08 Spinner/index8.html" class="btn btn-primary d-block">08 Spinner</a>
+      </div>
+
+      <div class="col">
+            <a href="09 Raiz/index9.html" class="btn btn-dark d-block">09 Raiz</a>
+      </div>
+
+      <div class="col">
+            <a href="10 Divs/index10.html" class="btn btn-danger d-block">10 Divs</a>
+      </div>
+
+      <div class="col">
+            <a href="11 Generar/index11.html" class="btn btn-primary d-block">11 Generar</a>
+      </div>
+
+      <div class="col">
+            <a href="12 RGB/index12.html" class="btn btn-dark d-block">12 RGB</a>
+      </div>
+
+      <div class="col">
+            <a href="13 Chicha/index13.html" class="btn btn-primary d-block">13 Chicharronera</a>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
       
 
